--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ requests = "^2.31.0"
 mkdocs = "^1.5.3"
 mkdocs-material = "^9.5.15"
 mkdocs-awesome-pages-plugin = "^2.9.2"
+sqlalchemy = "^2.0.29"
+pyodbc = "^5.1.0"
+
 
 [build-system]
 requires = ["poetry-core"]
