--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ mkdocs-material = "^9.5.15"
 mkdocs-awesome-pages-plugin = "^2.9.2"
 sqlalchemy = "^2.0.29"
 pyodbc = "^5.1.0"
+pylint = "^3.1.0"
 
 
 [build-system]
