--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ mkdocs-awesome-pages-plugin = "^2.9.2"
 sqlalchemy = "^2.0.29"
 pyodbc = "^5.1.0"
 pylint = "^3.1.0"
+beautifulsoup4 = "^4.12.3"
 
 
 [build-system]
